# project_template

./: .gitignore  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  Makefile  Makefile.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
scripts/: update_precommit_template.py
src/project_template/: __init__.py
template/: .gitignore.jinja  .pre-commit-config.yaml.jinja  Makefile.jinja  main.py.jinja  pyproject.toml.jinja  {% if project_type == "app" %}.python-version{% endif %}
template/.devcontainer/: devcontainer.json.jinja
{{ project_name }}/: .pre-commit-config.yaml.jinja  Makefile.jinja  pyproject.toml.jinja
{{ project_slug }}/: Makefile.jinja  pyproject.toml.jinja
