[project]
name = "project_template"
version = "0.1.0"
description = "A Python package that does things."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "copier",
    "prek",
]

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
extend-exclude = [
    "*{{*}}*",
    "*{%*%}*",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
    "S311",
]
